style.css
nav {
  display: flex;
  height: 48px;
  justify-content: space-between;
  background-color: #0d1211;
  padding: 5px 15px;
  font-size: 18px;
  position: sticky;
  z-index: 50;
  top: 0;
  gap: 30px;
  box-shadow: 10px 2px 15px 2px black;
  letter-spacing: .2rem;
  text-align: center;
  transition: translate 0.6s ease-out;
}

.navBar {
  display: flex;
  align-items: center;
  justify-content: space-between;
  flex-shrink: 1;
  gap: 40px;
}

#navRight {
  font-family: 'Monsieur La Doulaise';
  font-size: 22px;
  display: flex;
  align-items: center;
  text-shadow: none;
}

.CTA {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 10px;
  flex-shrink: 3;
}

.CTA a {
  display: flex;
  flex-shrink: 3;
  background-color: #273327;
  border: solid #273327;
  border-radius: 15px;
  font-size: 13px;
  margin: 0 auto;
  width: 100%;
  justify-content: center;
  align-items: center;
  padding: 7px;
  text-shadow: 3px 1px 1px black;
}

.CTA a:hover {
  background-color: #243325;
  border: solid #293a2a;
}

.attn {
  display: flex;
  justify-content: center;
  align-items: center;
  height: auto;
  width: 100%;
  max-height: 550px;
  border: solid black 0px;
  border-left: 0px;
  border-right: 0px;
  background-color: black;
  z-index: 10; 
  border-bottom: solid rgba(95, 112, 122, 0.295) 1px;
  overflow: hidden;
}

.about {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 50px;
  padding-top: 0px;
  border-top: solid rgba(109, 109, 109, 0.116);
  background-color: #121d20;
  background-image:radial-gradient(#a7864c81 1px, transparent 1px);
  background-size: 20px 20px;
  background-position: center;
}

.container {
  border: solid #0d1211;
  border-radius: 20px;
  background-color: #0d1211e0;
  display: flex;
  max-width: 1000px;
  justify-content: space-around;
  padding: 0px 0px 0px 10px;
  gap: 10px;
  box-shadow: 8px 5px 15px 1px black;
}

#img,
#footer {
  flex-wrap: wrap;
  padding: 0px;
  margin-top: 25px;
}

#img {
  flex-direction: column;
  align-items: flex-start;
}

.container a {
  font-size: 18px;
  padding: 10px;
}

.textBox {
  max-width: 60%;
  border-top: solid #3c524d27;
  margin-top: 10px;
  padding: 10px;
}

.text {
  border-bottom: solid #3c524d27;
  padding: 10px;
}

.image {
  display: flex;
  align-items: center;
  max-width: 40%;
  object-fit: cover;
  border-radius: 20px;
}

.imageBox {
  border-radius: 15px;
  display: flex;
  width: 100%;
}

.imageBox a {
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
  text-align: center;
}

#creatureImage, #mv {
  z-index: 10;
  position: relative;
  transition: border 5s;
}

.imageBox img:hover {
  border: solid grey 1px;
}

.info {
  color: rgba(170, 169, 169, 0.726);
  font-size: 16px;
}

#footer {
  margin-bottom: 0px;
  flex-direction: row;
}

#hidden {
  position: fixed;
  width: 100%;
  height: 100%;
  z-index: 8;
  transition: opacity 20s;
  transition: 
    opacity 20s;
  background-image: url("./resources/creature.gif");
  box-shadow: 0 0 0px rgba(0,0,0,0.9) inset;
  opacity: 0%;
}

#about {
  transition: 
    transform 0.8s,
    translate 0.4s,
    opacity 0.3s,
    scale 1s;
  transform: scale(0.8);
  translate: 0% -50%;
  z-index: 1;
  opacity: 0%;
}

 #aboutMe {
  z-index: 10;
  position: relative;
  top: -51px;
}  */

video {
  z-index: 0;
}

#work {
  padding-top: 50px;
}

@media (max-width: 800px) {
  p {
    font-size: 15px;
  }
}

@media (max-width: 610px) {
  .navBar {
    width: 100%;
    justify-content: space-around;
  }
  .navBar a {
    font-size: 15px;
  }
  .CTA {
    display: none;
  }
  .image {
    object-fit: contain;
    max-width: 100%;
  }
  .container {
    flex-direction: column;
  }
  .textBox {
    max-width: 100%;
  }
}

@media (max-width: 465px) {
  .CTA {
    display: none;
  }
}

